Add more APIs
